<resources>
    <string name="app_name">JMP_Certification</string>
    <string name="nama">Nama</string>
    <string name="date">date</string>
    <string name="alamat">alamat</string>
    <string name="jk">JK</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="nohp">NoHp</string>
    <string name="sumbit">Sumbit !</string>
    <string name="ceklokasi">cekLokasi</string>
    <string name="delete">Delete</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
</resources>