<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NoteAddUpdateActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nohp"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/opsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/laki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki"/>
        <RadioButton
            android:id="@+id/perempuan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/perempuan"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_ceklokasi"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ceklokasi" />
    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sumbit" />
</LinearLayout>